--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Dashboard BrasilSeg - Itens Pessoais</title>
+    <title>Dashboard Mega da Virada 2025</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
